crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Happy_Pairs_Asia_Ja_PAL_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Happy Pairs (Asia) (Ja) (PAL) (Unl).zip
rom_sha256=8919ebb65e49976e0f56a9e256844a980425a4fb981649893071a1025f33ed4a
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=43514e6a7abe089f
checkpoint f900 fb_fnv1a64=feb0b72d0e70b7c9
checkpoint f1100 fb_fnv1a64=a722bc5827184e96
