crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Lightgun_Game_2_in_1_Cosmocop_Cyber_Monster_Asia_Ja_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Lightgun Game 2 in 1 - Cosmocop + Cyber Monster (Asia) (Ja) (Unl).zip
rom_sha256=6102a22642c4bebe2195957623b4d1cba6fc0edb3f9b422f3f758e0eccf67a2e
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=cbd17d7bc88be5bc
checkpoint f900 fb_fnv1a64=93feb90a08b82875
checkpoint f1100 fb_fnv1a64=d71f5003c05f23c4
