crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Mahjong_Academy_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Mahjong Academy (Sachen) [!].nes
rom_sha256=d9b243efc403b399889f50c2e86668f6e193cb937e746f9dd5d4095377872c90
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=f7d8bb55db894845
checkpoint f900 fb_fnv1a64=252455078c664884
checkpoint f1100 fb_fnv1a64=252455078c664884
