crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_150_Sachen74LS374N_Taiwan_Mahjong_2_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Taiwan Mahjong 2 (Sachen) [!].nes
rom_sha256=f133bff4bd415543009ab8efa5f9cb1e1a1877f2451937204e0e2c6961eb7472
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=8482afc78a3bb2e5
checkpoint f900 fb_fnv1a64=475ebfa3f195caf9
checkpoint f1100 fb_fnv1a64=475ebfa3f195caf9
